[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-lttta"
version = "0.1.0"
description = "Agentic long-term test-time adaptation baseline for RealPDE Track 2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.19",
  "huggingface-hub>=0.23",
  "numpy>=1.24",
  "pyyaml>=6.0",
  "torch>=2.1",
]

[project.optional-dependencies]
adk = [
  "google-adk",
  "google-genai",
]

[tool.setuptools.packages.find]
include = ["agentic_lttta*"]
